--- a/ddupree-portfolio/src/App.css
+++ b/ddupree-portfolio/src/App.css
@@ -46,7 +46,7 @@ p, a, li, button, ul {
   margin: 0;
   padding: 0;
   line-height: normal;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 a:hover {
